# yolobox

./: .gitignore  AGENTS.md  pyproject.toml  readme.md
.agents/skills/claude/: SKILL.md
.automation/scheduled-agent-runner/: config.toml
.claude/skills/codex/: SKILL.md
.codex/: .gitignore
.config/: wt.toml
.devcontainer/: Dockerfile  devcontainer.json  post_install.py  readme.md
.takopi/: takopi.toml
docs/plans/: 001-scheduled-agent-runner.md
specs/: spec.md  user-flow.md
src/scheduled_agent_runner/: __main__.py  cli.py  config.py  notify.py  runner.py
tests/: test_cli.py  test_post_install.py  test_runner.py  test_schedule.py
